--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -4,3 +4,18 @@
 <li><strong>Bottled on:</strong><%= @batch.bottled_date %></li>
 
 <%= link_to "show qr code", qr_code_path(@batch.id) %>
+
+
+<div class="batch-reviews">
+      <div class="batch-review-title">
+        <h2>Reviews</h2>
+      </div>
+      <div class="show-batch-review">
+        <% @review_batches.each do |review| %>
+        <p class="review-show"><b><%= review.rating %></b> -- <%= review.user.first_name %>: <i style="font-weight: 300;"><%= review.content %></i></p>
+        <% end %>
+      </div>
+</div>
+
+
+<%= link_to "Add review", new_beer_batch_review_batch_path(@beer.id, @batch.id), class: 'add-review-beer-btn'%>
