--- a/app/views/review_batches/new.html.erb
+++ b/app/views/review_batches/new.html.erb
@@ -2,16 +2,14 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 offset-sm-4">
       <div class="review-form">
-        <h1>Add a review for <%= @beer.name %></h1>
+        <h1>Add a review for this batch</h1>
 
-        <%= simple_form_for([@beer, @review_beer], :url => beer_review_beers_path) do |f| %>
+        <%= simple_form_for([@beer, @batch, @review_batch], :url =>  beer_batch_review_batches_path) do |f| %>
         <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5] %>
         <%= f.input :content %>
-        <%= f.input :photo %>
-        <%= f.input :photo_cache, as: :hidden %>
         <%= f.button :submit, class: "btn btn-primary" %>
         <% end %>
-        <%= link_to "Go back to beer", beer_path(@beer), class: 'go-to-beers-btn' %>
+        <%= link_to "Go back to batch", beer_batch_path(@beer.id, @batch), class: 'go-to-beers-btn' %>
       </div>
     </div>
   </div>
