--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -4,6 +4,15 @@
   }
 
 </style>
+
+<div id="demo">
+  <%= form_for :geoloc, url: profile_geoloc_url, remote: true,  id: :geoloc do |f| %>
+      <%= hidden_field_tag :lat %>
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+      <%= hidden_field_tag :lng %>
+  <% end %>
+
+</div>
 <div class="landing">
   <div class="landing-content">
     <div class="landing-title">
