--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -1,6 +1,24 @@
-<h1>Info about this specific batch</h1>
-<li><strong>batch description:</strong><%= @batch.description %></li>
-<li><strong>batch quantity:</strong><%= @batch.quantity %></li>
-<li><strong>Bottled on:</strong><%= @batch.bottled_date %></li>
+<h1>This batch of <%= @batch.beer.name %> was bottled on <%= @batch.bottled_date %> by <%= @batch.brewery.name %>.</h1><br>
+<h2>Here is some more information about this batch:</h2><br>
+<li><strong>Description:</strong><%= @batch.description %></li>
+<li><strong>Total quantity produced: </strong><%= @batch.quantity %></li><br>
+<h3>Brewing Process:</h3>
+<li><strong>Brewing Start Date: </strong><%= @batch.brewingstart %></li>
+<li><strong><%= @batch.stepone %>: </strong><%= @batch.steponedescription %></li>
+<li><strong><%= @batch.steptwo %>: </strong><%= @batch.steptwodescription %></li>
+<li><strong><%= @batch.stepthree %>: </strong><%= @batch.stepthreedescription %></li>
+<li><strong><%= @batch.stepfour %>: </strong><%= @batch.stepfourdescription %></li>
+<li><strong><%= @batch.stepfive %>: </strong><%= @batch.stepfivedescription %></li>
+<li><strong><%= @batch.stepsix %>: </strong><%= @batch.stepsixdescription %></li>
+<li><strong><%= @batch.stepseven %>: </strong><%= @batch.stepsevendescription %></li>
+<li><strong> Bottling: </strong><%= @batch.bottled_date %></li><br>
+<h3>Primary Ingredients:</h3>
+<li><strong><%= @batch.ingredientone %>: </strong><%= @batch.ingredientonedesc %></li>
+<li><strong><%= @batch.ingredienttwo %>: </strong><%= @batch.ingredienttwodesc %></li>
+<li><strong><%= @batch.ingredientthree %>: </strong><%= @batch.ingredientthreedesc %></li>
+<li><strong><%= @batch.ingredientfour %>: </strong><%= @batch.ingredientfourdesc %></li><br><br>
 
-<%= link_to "show qr code", qr_code_path(@batch.id) %>
+<%= link_to "view qr code", qr_code_path(@batch.id), class: 'go-to-beers-btn' %>
+<%= link_to "View all batches for this beer", beer_batches_path(@batch.beer), class: 'go-to-beers-btn' %>
+<%= link_to "Go back to beer", beer_path(@batch.beer), class: 'go-to-beers-btn' %>
+<%= link_to "Go to this beer's brewery", brewery_path(@batch.brewery), class: 'go-to-beers-btn' %><br><br><br>
