--- a/app/views/shared/navbar/_navbar_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_white.html.erb
@@ -11,6 +11,11 @@
   top: -40px !important;
 }
 
+a:hover {
+  opacity: 0.7% !important;
+  color: white !important;
+}
+
 .dropdown button {
   color: white;
   background:none;
