--- a/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
@@ -10,6 +10,11 @@
   filter: invert(100%);
 }
 
+a:hover {
+  opacity: 0,1% !important;
+  color: white !important;
+}
+
 .dropdown button {
   background: none;
   border: none;
