--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -4,7 +4,7 @@
   }
 
 </style>
-
+<% if current_user %>
 <div id="demo">
   <%= form_for :geoloc, url: profile_geoloc_url, remote: true,  id: :geoloc do |f| %>
       <%= hidden_field_tag :lat %>
@@ -13,6 +13,8 @@
   <% end %>
 
 </div>
+  <% end %>
+
 <div class="landing">
   <div class="landing-content">
     <div class="landing-title">
