--- a/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
@@ -16,6 +16,11 @@
   border: none;
   box-shadow: none;
 }
+a:hover {
+  opacity: 0.7% !important;
+  color: white !important;
+}
+
 
 .btn-navbar{
     background-color: rgba(0,0,0,0.7) !important;
