--- a/app/assets/stylesheets/breweries.scss
+++ b/app/assets/stylesheets/breweries.scss
@@ -39,6 +39,11 @@
   height: 500px;
   // border-radius: 5px;
   box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.5);
+  transition: 0.4s ease;
+  &:hover {
+    transform: scale(1.2);
+    transition: 0.4s ease;
+  }
 }
 
 .brewery-card-name {
