--- a/app/assets/stylesheets/brewery.scss
+++ b/app/assets/stylesheets/brewery.scss
@@ -51,3 +51,19 @@
     margin-right: 10px !important;
   }
 }
+
+
+.follow-btn {
+  width:80px;
+  height:30px;
+  align-content:center;
+  text-align:center;
+  margin:10px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  p {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+}
