profile beer modified

--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -161,3 +161,13 @@
   margin-bottom:70px;
   margin-top: 20px;
 }
+
+.beer-profile{
+  display:grid;
+  grid-template-columns: 40% 70%;
+  grid-template-row: 50% 50%;
+}
+
+.beer-map {
+  margin: 25px;
+}
