--- a/app/assets/stylesheets/brewery.scss
+++ b/app/assets/stylesheets/brewery.scss
@@ -67,3 +67,68 @@
     margin-bottom: 0 !important;
   }
 }
+
+.brewery-beers-container {
+  padding: 1rem;
+  display: flex;
+  text-align: center;
+  overflow-x: scroll;
+  scroll-padding: 0 50%;
+  scroll-snap-type: x mandatory;
+}
+
+.brewery-beer-cards {
+  margin-right: 100px;
+  margin-left: 100px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  font-family: 'Raleway', sans-serif;
+  justify-content: center;
+  padding-bottom: 40px;
+  scroll-snap-align: center;
+}
+
+.brewery-beer-card {
+  border-radius: 5px;
+  margin: 15px;
+  a {
+    color: inherit !important;
+    text-decoration: none !important;
+  }
+}
+
+.brewery-beer-card-body {
+  position: relative;
+  color: white;
+  background-size: cover;
+  width: 150px;
+  height: 250px;
+  background-repeat: no-repeat;
+  justify-content: flex-start;
+  transition: 0.4s ease;
+  &:hover {
+  transform: scale(1.05);
+  transition: 0.4s ease;
+  }
+
+}
+
+.brewery-beer-card-link {
+
+}
+
+.brewery-beer-card-name {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.brewery-beer-card-alcohol {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-weight: 300;
+}
