--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -14,6 +14,28 @@
     <p><strong>Email: </strong><%= @brewery.email %></p>
     <p><strong><%= link_to "Visit #{@brewery.name}'s Website", "https://www.beerproject.be/en", target: "_blank" %></strong></p>
   </div>
+
+  <h2>Check all this Brewery's beers</h2>
+  <div class="brewery-beers-container">
+    <div class="brewery-child brewery-beer-cards">
+      <% @beers.each do |beer| %>
+        <%= link_to beer_path(beer) do %>
+          <div class="brewery-child brewery-beer-card">
+            <div class="brewery-beer-card-body" style="background-image: linear-gradient(-150deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.3) 80%), url(<%= cl_image_path(beer.photo) %>">
+              <div class="brewery-beer-card-link">
+                <div class="brewery-beer-card-name">
+                  <%= beer.name %><br>
+                </div>
+                <div class="brewery-beer-card-alcohol">
+                  <%= beer.alcohol_percentage %>%<br>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
 
 <% if  user_signed_in? && current_user.checkins.where(brewery: @brewery)[0].nil? %>
