added top 3 beers to profile page

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.admin? %>
+<% if user_signed_in? && current_user.admin? %>
   <%= render 'brewer_profile.html.erb' %>
 <% else %>
   <%= render 'user_profile.html.erb' %>
