fixing SMTP authentication error

--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -1,11 +1,13 @@
-<h1>These are your batches</h1>
+<h1>Here are all batches for <%= @beer.name %>:</h1>
 
+<ul>
 <% @batches.each do |batch| %>
   <%= link_to beer_batch_path(:beer_id, batch) do %>
-  <%= batch.description %><br>
-  <%= batch.quantity %><br>
-  <%= batch.bottled_date %><br>
+    <li>Beer Name: <%= batch.beer.name %></li>
+    <li>Batch ID: <%= batch.id %></li>
+    <li>Bottled Date: <%= batch.bottled_date %></li><br><br>
   <% end %>
 <% end %>
+</ul>
 
 <%= link_to "Go back to beer", beer_path(@beer), class: 'go-to-beers-btn' %>
