--- a/app/views/profiles/_user_profile.html.erb
+++ b/app/views/profiles/_user_profile.html.erb
@@ -39,6 +39,7 @@
     </div>
     <div class="col-xs-12 col-md-3 marg-bot">
       <h2>Recent reviews</h2>
+      <%= if !@posts.nil? %>
       <% @posts.each do |post| %>
       <div class="wrapper-post">
         <div class="box-post">
@@ -69,10 +70,17 @@
         </div>
       </div>
       <% end %>
+      <% else %>
+      <div class="wrapper-post">
+        <div class="box-post">
+          <p>No reviews yet</p>
+        </div>
+      </div>
+
     </div>
     <% if current_user == @user %>
-    <h2>Friend Finder</h2>
     <div class="col-xs-12 col-md-3 marg-bot">
+    <h2>Friend Finder</h2>
       <!-- Below is the container to find other people -->
       <div class="search-friends-container">
         <%= simple_form_for(User.new, method: :post, url: show_with_username_path) do |f| %>
