--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,22 +1,28 @@
-<div class='brewery-title'>
-  <h2><%= @brewery.name %></h2><br>
-  <h3><%= @brewery.description %></h3>
-</div>
-
-<div class='brewery-container'>
-  <div class='brewery-photo'>
-    <img src='<%= cl_image_path(@brewery.photo) %>' height='500'>
+<div class="beer-profile">
+  <div class='brewery-title-show'>
+    <div class='brewery-photo'>
+      <img src='<%= cl_image_path(@brewery.photo) %>' height='500'>
+    </div>
+      <h2><%= @brewery.name %></h2><br>
   </div>
-  <div class="show-brewery-card">
+
+<div class='brewery-map'>
+  <div id="map" style="width: 100vw; height: 350px; margin-top: 90px;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+</div>
+<div class="show-brewery-card">
     <h4>Contact Details:</h4>
     <p><strong>Address: </strong><%= @brewery.address %></p>
     <p><strong>Phone Number: </strong><%= @brewery.phone_number %></p>
     <p><strong>Email: </strong><%= @brewery.email %></p>
+    <p><%= @brewery.description %></p>
+
+  </div>
+  <div class="more-brew-desc">
     <p><strong><%= link_to "Visit #{@brewery.name}'s Website", "https://www.beerproject.be/en", target: "_blank" %></strong></p>
      <% if current_user  %>
                 <%= @brewery.distance_from([current_user.lat, current_user.lng]).round(3) %> km
               <% end %>
-  </div>
 </div>
 
 <% if  user_signed_in? && current_user.checkins.where(brewery: @brewery)[0].nil? %>
@@ -48,9 +54,8 @@
 
   <%= link_to "Go back to breweries", breweries_path, class: 'go-to-beers-btn' %>
 
-  <div id="map" style="width: 100vw; height: 350px; margin-top: 90px;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
 
+  </div>
 
 
 
