--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -149,6 +149,7 @@
   margin: 25px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   p {
     margin: 0;
@@ -193,6 +194,8 @@
 .beer-map {
   margin: 25px;
 }
+
+
 
 @media all and (max-width: 700px) {
   .beer-profile {
