--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -10,36 +10,31 @@
   <div id="map" style="width: 100vw; height: 350px; margin-top: 90px;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
-<div class="show-brewery-card">
+  <div class="show-brewery-card">
     <h4>Contact Details:</h4>
     <p><strong>Address: </strong><%= @brewery.address %></p>
     <p><strong>Phone Number: </strong><%= @brewery.phone_number %></p>
     <p><strong>Email: </strong><%= @brewery.email %></p>
     <p><%= @brewery.description %></p>
-
-  </div>
-  <div class="more-brew-desc">
+      <div class="more-brew-desc">
     <p><strong><%= link_to "Visit #{@brewery.name}'s Website", "https://www.beerproject.be/en", target: "_blank" %></strong></p>
      <% if current_user  %>
                 <%= @brewery.distance_from([current_user.lat, current_user.lng]).round(3) %> km
               <% end %>
-
-  </div>
-
-  <h2>Check all this Brewery's beers</h2>
-  <div class="brewery-beers-container">
-    <div class="brewery-child brewery-beer-cards">
+      </div>
+   </div>
+   <div class="brewery-child brewery-cards">
+    <h2>Check all this Brewery's beers</h2>
+    <div class="siema">
       <% @beers.each do |beer| %>
         <%= link_to beer_path(beer) do %>
-          <div class="brewery-child brewery-beer-card">
-            <div class="brewery-beer-card-body" style="background-image: linear-gradient(-150deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.3) 80%), url(<%= cl_image_path(beer.photo) %>">
-              <div class="brewery-beer-card-link">
-                <div class="brewery-beer-card-name">
-                  <%= beer.name %><br>
-                </div>
-                <div class="brewery-beer-card-alcohol">
-                  <%= beer.alcohol_percentage %>%<br>
-                </div>
+          <div class="brewery-beer-card-body" style="background-image: linear-gradient(-150deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.3) 80%), url(<%= cl_image_path(beer.photo) %>">
+            <div class="brewery-beer-card-link">
+              <div class="brewery-beer-card-name">
+                <%= beer.name %><br>
+              </div>
+              <div class="brewery-beer-card-alcohol">
+                <%= beer.alcohol_percentage %>%<br>
               </div>
             </div>
           </div>
